--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,9 +1,14 @@
 {
-    "/js/app.js": "/js/app.js?id=11cc81dcd87b39cac28d",
-    "/css/app.css": "/css/app.css?id=37cfc5195088561b89ac",
-    "/admin/css/custom.css": "/admin/css/custom.css?id=d12e2570471bb7b24404",
-    "/js/lp.js": "/js/lp.js?id=334cd5c53dae97f6e0a0",
-    "/admin/js/custom-force.js": "/admin/js/custom-force.js?id=31e20ace52f6c60317da",
+    "/js/app.js": "/js/app.js?id=4b2b684f0f466f101ea0",
+    "/css/app.css": "/css/app.css?id=6f2d6f92135067b01d66",
+    "/admin/css/custom.css": "/admin/css/custom.css?id=7d469affc07ebd0f185f",
+    "/js/app.js.map": "/js/app.js.map?id=f1c0d4251adb4cfe1b91",
+    "/css/app.css.map": "/css/app.css.map?id=ea65ad7c73db6045dcef",
+    "/admin/css/custom.css.map": "/admin/css/custom.css.map?id=570a6440ab3678c563e6",
+    "/js/lp.js": "/js/lp.js?id=999cac88196f328ba86a",
+    "/js/lp.js.map": "/js/lp.js.map?id=3aaaf9c542b14089fb37",
+    "/admin/js/custom-force.js": "/admin/js/custom-force.js?id=48293e2592ae388803aa",
+    "/admin/js/custom-force.js.map": "/admin/js/custom-force.js.map?id=f83183ed1f4ae71db5aa",
     "/admin/css/plugins.css": "/admin/css/plugins.css?id=c16f0b63821889c551a0",
     "/admin/js/plugins-force.js": "/admin/js/plugins-force.js?id=1eeded028ac5a296110a"
 }
