--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,9 +1,14 @@
 {
-    "/js/app.js": "/js/app.js?id=11cc81dcd87b39cac28d",
-    "/css/app.css": "/css/app.css?id=37cfc5195088561b89ac",
-    "/admin/css/custom.css": "/admin/css/custom.css?id=d12e2570471bb7b24404",
-    "/js/lp.js": "/js/lp.js?id=334cd5c53dae97f6e0a0",
-    "/admin/js/custom.js": "/admin/js/custom.js?id=243159e72c07e4982632",
+    "/js/app.js": "/js/app.js?id=4b2b684f0f466f101ea0",
+    "/css/app.css": "/css/app.css?id=6f2d6f92135067b01d66",
+    "/admin/css/custom.css": "/admin/css/custom.css?id=7d469affc07ebd0f185f",
+    "/js/app.js.map": "/js/app.js.map?id=f0e0bb3d6c16cbeb218b",
+    "/css/app.css.map": "/css/app.css.map?id=ea65ad7c73db6045dcef",
+    "/admin/css/custom.css.map": "/admin/css/custom.css.map?id=570a6440ab3678c563e6",
+    "/js/lp.js": "/js/lp.js?id=999cac88196f328ba86a",
+    "/js/lp.js.map": "/js/lp.js.map?id=ae164b08075a4ab7da2b",
+    "/admin/js/custom.js": "/admin/js/custom.js?id=0d80d5feafa28948e7c4",
+    "/admin/js/custom.js.map": "/admin/js/custom.js.map?id=75d23694f312baad7962",
     "/admin/css/plugins.css": "/admin/css/plugins.css?id=e1d53212ba9a8268f72e",
     "/admin/js/plugins.js": "/admin/js/plugins.js?id=1eeded028ac5a296110a"
 }
