--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,9 +1,14 @@
 {
-    "/js/app.js": "/js/app.js?id=11cc81dcd87b39cac28d",
-    "/css/app.css": "/css/app.css?id=c3452aab901b413bf828",
-    "/admin/css/custom.css": "/admin/css/custom.css?id=d12e2570471bb7b24404",
-    "/js/lp.js": "/js/lp.js?id=334cd5c53dae97f6e0a0",
-    "/admin/js/custom-force.js": "/admin/js/custom-force.js?id=c7f94fc98d07b3ebdb47",
+    "/js/app.js": "/js/app.js?id=4b2b684f0f466f101ea0",
+    "/css/app.css": "/css/app.css?id=ca91b610370953ec7f57",
+    "/admin/css/custom.css": "/admin/css/custom.css?id=7d469affc07ebd0f185f",
+    "/js/app.js.map": "/js/app.js.map?id=8af704138aabcc6fcda9",
+    "/css/app.css.map": "/css/app.css.map?id=831ab5dcd5649d3d785d",
+    "/admin/css/custom.css.map": "/admin/css/custom.css.map?id=570a6440ab3678c563e6",
+    "/js/lp.js": "/js/lp.js?id=999cac88196f328ba86a",
+    "/js/lp.js.map": "/js/lp.js.map?id=361a13eda4abf60a230d",
+    "/admin/js/custom-force.js": "/admin/js/custom-force.js?id=2db4e428ce8244d672f5",
+    "/admin/js/custom-force.js.map": "/admin/js/custom-force.js.map?id=9a001e1bab1ac7f49b34",
     "/admin/css/plugins.css": "/admin/css/plugins.css?id=3a78790a4e933ae62abf",
     "/admin/js/plugins.js": "/admin/js/plugins.js?id=1eeded028ac5a296110a"
 }
