--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -2,13 +2,13 @@
     "/js/app.js": "/js/app.js?id=4b2b684f0f466f101ea0",
     "/css/app.css": "/css/app.css?id=40edc19c537b7c4fca1a",
     "/admin/css/custom.css": "/admin/css/custom.css?id=7d469affc07ebd0f185f",
-    "/js/app.js.map": "/js/app.js.map?id=f7e75405cbaca5e06186",
+    "/js/app.js.map": "/js/app.js.map?id=e360565a9ee690d4b198",
     "/css/app.css.map": "/css/app.css.map?id=1957dbe4040a9f4e5c27",
     "/admin/css/custom.css.map": "/admin/css/custom.css.map?id=570a6440ab3678c563e6",
     "/js/lp.js": "/js/lp.js?id=999cac88196f328ba86a",
-    "/js/lp.js.map": "/js/lp.js.map?id=47df178d2d8c63791f9c",
-    "/admin/js/custom-force.js": "/admin/js/custom-force.js?id=2db4e428ce8244d672f5",
-    "/admin/js/custom-force.js.map": "/admin/js/custom-force.js.map?id=987cd136a13bfcb23f07",
+    "/js/lp.js.map": "/js/lp.js.map?id=51c801d0c8542e532a82",
+    "/admin/js/custom.js": "/admin/js/custom.js?id=d3fc5f3e0674fc30d2b0",
+    "/admin/js/custom.js.map": "/admin/js/custom.js.map?id=03cbab15300069b6ff23",
     "/admin/css/plugins.css": "/admin/css/plugins.css?id=3a78790a4e933ae62abf",
     "/admin/js/plugins.js": "/admin/js/plugins.js?id=1eeded028ac5a296110a"
 }
