--- a/supervisor/laraver-worker.conf
+++ b/supervisor/laraver-worker.conf
@@ -1,9 +1,9 @@
 [program:laravel-worker]
 process_name=%(program_name)s_%(process_num)02d
-command=php /var/www/dating/artisan queue:work database --queue=emails --sleep=3 --tries=3 --timeout=60
+command=php /var/www/dating/artisan queue:work database --queue=emails,general --sleep=3 --tries=3 --timeout=60
 autostart=true
 autorestart=true
 user=opalampo
-numprocs=1
+numprocs=8
 redirect_stderr=true
-stdout_logfile=/var/www/dating/emails-queue-worker.log
+stdout_logfile=/var/www/dating/queue-worker.log
