--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,14 +1,16 @@
 {
-    "/js/app.js": "/js/app.js?id=7a852ed6b0ba0e56f6c5",
-    "/css/app.css": "/css/app.css?id=f2204508e7d26dfcb8ca",
+    "/js/app.js": "/js/app.js?id=5ad086a777b661448295",
+    "/css/altijdsex-nl/app.css": "/css/altijdsex-nl/app.css?id=f2204508e7d26dfcb8ca",
+    "/css/whitelabel-nl/app.css": "/css/whitelabel-nl/app.css?id=7a46cd3bc92e425f3271",
     "/admin/css/custom.css": "/admin/css/custom.css?id=4faa5c213787bafbf653",
-    "/js/app.js.map": "/js/app.js.map?id=6233681c16d4a5a03c61",
-    "/css/app.css.map": "/css/app.css.map?id=4982abacdc32f6fe1116",
+    "/js/app.js.map": "/js/app.js.map?id=95cb3adbe6d4b1759843",
+    "/css/altijdsex-nl/app.css.map": "/css/altijdsex-nl/app.css.map?id=597a6842150d22a1848d",
+    "/css/whitelabel-nl/app.css.map": "/css/whitelabel-nl/app.css.map?id=e8238f6de109a623cedd",
     "/admin/css/custom.css.map": "/admin/css/custom.css.map?id=db3150abfbbc953c70c3",
     "/admin/js/custom-force.js": "/admin/js/custom-force.js?id=c247d3af816bf56c1ac0",
-    "/admin/js/custom-force.js.map": "/admin/js/custom-force.js.map?id=f7689a0346845072889a",
+    "/admin/js/custom-force.js.map": "/admin/js/custom-force.js.map?id=e4ff5b33ac5a0b0d254f",
     "/js/lp.js": "/js/lp.js?id=faaefe1aed440ea842c7",
-    "/js/lp.js.map": "/js/lp.js.map?id=150161410fb3ce63b8e3",
+    "/js/lp.js.map": "/js/lp.js.map?id=500a070e5543e385dd59",
     "/admin/css/plugins.css": "/admin/css/plugins.css?id=45a84309d4c66993673d",
     "/admin/js/plugins-force.js": "/admin/js/plugins-force.js?id=e8da6036ef883032d432"
 }
