--- a/composer.json
+++ b/composer.json
@@ -6,37 +6,38 @@
     "type": "project",
     "require": {
         "php": ">=7.4",
-        "laravel/framework": "5.8.*",
-        "kim/activity": "^1.1",
+        "laravel/framework": "^7.0",
         "league/flysystem-aws-s3-v3": "^1.0",
         "predis/predis": "^1.1",
         "fzaninotto/faker": "~1.4",
         "intervention/image": "^2.3",
-        "graham-campbell/markdown": "^10.2",
+        "graham-campbell/markdown": "^12.0.2",
         "tpweb/targetpay": "1.*",
         "rap2hpoutre/laravel-log-viewer": "^1.4.0",
         "pusher/pusher-php-server": "^3.0",
         "guzzlehttp/guzzle": "^6.3",
         "php-http/guzzle6-adapter": "^1.1",
-        "cornford/googlmapper": "^2.35.1",
-        "grimthorr/laravel-toast": "^1.1",
+        "cornford/googlmapper": "^3.3.0",
+        "yoeunes/toastr": "^1.2.3",
         "stevebauman/location": "^5.0",
         "ext-SimpleXML": "*",
         "spatie/geocoder": "^3.6",
         "digiwallet/transaction-sdk": "^1.0",
-        "yoeunes/toastr": "^1.2",
-        "symfony/process": "^4.4.4",
+        "symfony/process": "^5.0",
         "doctrine/dbal": "^2.10",
         "consoletvs/charts": "6.*",
-        "google/recaptcha": "^1.2"
+        "google/recaptcha": "^1.2",
+        "laravel/tinker": "^2.0",
+        "laravel/ui": "^2.0"
     },
     "require-dev": {
         "mockery/mockery": "^1.0",
         "filp/whoops": "^2.0",
-        "phpunit/phpunit": "^7.5",
+        "phpunit/phpunit": "^8.5",
         "symfony/css-selector": "3.1.*",
         "symfony/dom-crawler": "3.1.*",
-        "nunomaduro/collision": "^3.0",
+        "nunomaduro/collision": "^4.1",
+        "facade/ignition": "^2.0",
         "squizlabs/php_codesniffer": "^2.7",
         "barryvdh/laravel-ide-helper": "^2.3.2",
         "barryvdh/laravel-debugbar": "^3.1.5",
