--- a/composer.json
+++ b/composer.json
@@ -28,8 +28,7 @@
         "symfony/process": "^4.4.4",
         "doctrine/dbal": "^2.10",
         "consoletvs/charts": "6.*",
-        "google/recaptcha": "^1.2",
-        "mxl/laravel-queue-rate-limit": "^1.0"
+        "google/recaptcha": "^1.2"
     },
     "require-dev": {
         "mockery/mockery": "^1.0",
