--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
         "doctrine/dbal": "^2.10",
         "consoletvs/charts": "6.*",
         "google/recaptcha": "^1.2",
-        "aws/aws-sdk-php": "~3.0"
+        "aws/aws-sdk-php": "~3.0",
+        "laraveldaily/laravel-invoices": "^1.3"
     },
     "require-dev": {
         "mockery/mockery": "^1.0",
