--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,20 +1,12 @@
 {
-    "/js/app.js": "/js/app.js?id=1d20d194583250e69216",
-    "/css/altijdsex-nl/app.css": "/css/altijdsex-nl/app.css?id=e037641ce4b915b5ded7",
-    "/css/whitelabel-nl/app.css": "/css/whitelabel-nl/app.css?id=8408c3fd3d77d34887d3",
-    "/admin/css/custom.css": "/admin/css/custom.css?id=4d6a20295e28ec4edc30",
-    "/js/app.js.map": "/js/app.js.map?id=0e361e9ffd786ea1092b",
-    "/css/altijdsex-nl/app.css.map": "/css/altijdsex-nl/app.css.map?id=530295d43db9f22b9283",
-    "/css/whitelabel-nl/app.css.map": "/css/whitelabel-nl/app.css.map?id=0f39438fd531acf547d4",
-    "/admin/css/custom.css.map": "/admin/css/custom.css.map?id=7ecc575e70121ab62a5f",
-    "/admin/js/custom-force.js": "/admin/js/custom-force.js?id=c4e2f07109b435882003",
-    "/admin/js/custom-force.js.map": "/admin/js/custom-force.js.map?id=3220a3e37482cc6a7716",
-    "/js/lp.js": "/js/lp.js?id=47170532ffdb47e8b8e2",
-    "/js/lp.js.map": "/js/lp.js.map?id=63051e254129da0973ee",
-    "/js/lps/ads/lp2.js": "/js/lps/ads/lp2.js?id=595acd16a83f95a6b6e3",
-    "/js/lps/ads/lp2.js.map": "/js/lps/ads/lp2.js.map?id=c1e0d169ffa4bfabdf9f",
-    "/js/lps/ads/lp1.js": "/js/lps/ads/lp1.js?id=4a7605ed4c459fae1099",
-    "/js/lps/ads/lp1.js.map": "/js/lps/ads/lp1.js.map?id=75dd3aec0211f544068f",
+    "/js/app.js": "/js/app.js?id=4d01cf99a437d1186368",
+    "/css/altijdsex-nl/app.css": "/css/altijdsex-nl/app.css?id=e9b26feea35a42f58863",
+    "/css/whitelabel-nl/app.css": "/css/whitelabel-nl/app.css?id=6574d0836b32e9b0f50e",
+    "/admin/js/custom-force.js": "/admin/js/custom-force.js?id=e886003c8bffcd8f06f0",
+    "/js/lp.js": "/js/lp.js?id=ddfbb2c24a311486900d",
+    "/js/lps/ads/lp2.js": "/js/lps/ads/lp2.js?id=5e47acc69ec75ae14466",
+    "/js/lps/ads/lp1.js": "/js/lps/ads/lp1.js?id=3c04066bb2ec9831693f",
     "/admin/css/plugins.css": "/admin/css/plugins.css?id=45a84309d4c66993673d",
-    "/admin/js/plugins-force.js": "/admin/js/plugins-force.js?id=e8da6036ef883032d432"
+    "/admin/js/plugins-force.js": "/admin/js/plugins-force.js?id=e8da6036ef883032d432",
+    "/admin/css/custom.css": "/admin/css/custom.css?id=a16ca4520819357edd34"
 }
